--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "gcsfs" %}
-{% set version = "0.0.3" %}
-{% set sha256 = "1f97708f74ab0efb4f28626b240824238ccc547bac251974fa10d8f4e8570309" %}
+{% set version = "0.0.4" %}
+{% set sha256 = "ea292f63bcfc4d4b3d7744a336775f25df0f22fa1d304803cd0cb4576b943e94" %}
 
 package:
   name: {{ name }}
@@ -22,7 +22,8 @@ requirements:
 
   run:
     - python
-    - oauth2client
+    - google-auth
+    - google-auth-oauthlib
     - requests
 
 test:
