--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   script: python -m pip install --no-deps --ignore-installed .
   noarch: python
 
@@ -44,3 +44,5 @@ about:
 extra:
   recipe-maintainers:
     - martindurant
+    - jcrist
+    - tomaugspurger
