--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - google-auth-oauthlib
     - requests
     - decorator
-    - fsspec
+    - fsspec >=0.6.0
 
 test:
   imports:
