--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,8 +35,7 @@ test:
 
 about:
   home: https://github.com/dask/gcsfs
-  license: BSD
-  license_family: BSD
+  license: BSD-3-Clause
   license_file: LICENSE.txt
   summary: Pythonic file-system interface for Google Cloud Storage
   doc_url: http://gcsfs.readthedocs.io/en/latest/
